2015-07-15
	*version v0.1.7
	*fixed a bug when reading in pedigree information
	
2014-08-25
	*version v0.1.5
	*fixed a bug in the minimum recombinant routine affects families with >4 children

2014-05-22
	*version 0.1.4
	*minor bug fix to handle situation where SNPs have the exact same genetic position

2014-05-10
	*version 0.1.3
	*minor bug fix to handle situation where a SNPs is outside the range of the supplied genetic map

2014-03-23
	* Initial release with publication 0.1.2