@@ -2,39 +2,29 @@
 #     $(error BOOST_ROOT is undefined)
 # endif
 
-CC = g++
+CXX = g++
 LFLAGS = -L$(BOOST_ROOT)/lib -lz -lboost_iostreams  -lboost_program_options
 #LFLAGS = -lz $(BOOST_ROOT)/lib/libboost_iostreams.a $(BOOST_ROOT)/lib/libboost_program_options.a
 IFLAGS =  -I$(BOOST_ROOT)/include
+CFLAGS = -O3 $(IFLAGS) -Wall
 
 VERSION := $(shell git describe  --always --tags)
 
-release: CFLAGS = -O3 $(IFLAGS) -Wall
-release: duohmm
+HFILE= $(shell find lib/ -name *.h)
 
-debug: CFLAGS = -g -Wall $(IFLAGS)
-debug: duohmm 
+all: duohmm 
+debug: CFLAGS = -g -Wall $(IFLAGS) 
+debug: all
 
-duohmm: pedhap.o hapmodule.o utilityfunc.o pedigree.o hmm_duo.o hmm_trio.o  duohmm.cpp 
-	$(CC) -DVERSION=\"$(VERSION)\" duohmm.cpp pedhap.o hapmodule.o utilityfunc.o pedigree.o hmm_duo.o hmm_trio.o -o duohmm $(CFLAGS)  $(LFLAGS)
-unit_test: pedhap.o hapmodule.o utilityfunc.o pedigree.o hmm_duo.o hmm_trio.o test.cpp
-	$(CC)  test.cpp pedhap.o hapmodule.o utilityfunc.o pedigree.o hmm_duo.o hmm_trio.o -o test $(CFLAGS)
-pedhap.o: pedhap.h pedhap.cpp utilityfunc.o pedigree.o hmm_duo.o hmm_trio.o
-	$(CC) -c pedhap.cpp $(CFLAGS) 
-hapmodule.o: hapmodule.cpp hapmodule.h utilityfunc.o
-	$(CC) -c hapmodule.cpp $(CFLAGS) 
-utilityfunc.o:  utilityfunc.cpp utilityfunc.h
-	$(CC) -c utilityfunc.cpp $(CFLAGS)
-pedigree.o:  pedigree.h pedigree.cpp utilityfunc.cpp utilityfunc.h
-	$(CC) -c pedigree.cpp $(CFLAGS)
-hmm_duo.o:  hmm.h hmm_duo.cpp 
-	$(CC) -c hmm_duo.cpp $(CFLAGS)
-hmm_trio.o:  hmm.h hmm_trio.cpp
-	$(CC) -c hmm_trio.cpp $(CFLAGS)
+OBJS=obj/pedhap.o obj/hapmodule.o obj/utilityfunc.o obj/pedigree.o obj/hmm_duo.o obj/hmm_trio.o  
+duohmm: $(OBJS) duohmm.cpp 
+	$(CXX) -DVERSION=\"$(VERSION)\" $(OBJS) duohmm.cpp -o $@ $(CFLAGS)  $(LFLAGS) -Ilib/
+unit_test: $(OBJS) test.cpp
+	$(CXX)  test.cpp $(OBJS) -o test $(CFLAGS)
+obj/%.o: lib/%.cpp $(HFILE)
+	$(CXX) -o $@ -c $< $(CFLAGS) $(IFLAGS)
 test: duohmm
 	cd ../test/;bash -e test.sh
-all: duohmm 
-
 clean:
-	rm *.o
+	rm -f obj/*.o
 	rm -f duohmm unit_test ../test/observed.*
